--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "a-star": "^0.2.0",
+    "detect-collisions": "^2.5.1",
     "lodash": "^4.17.15",
     "monaco": "^1.201704190613.0",
     "monaco-editor": "^0.20.0",
